--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
   padding:0;
   margin:0; 
   box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
+
+body {
+  background-color: var(--background-color);
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height:100vh;
+  color: var(--primary-text)
+}
+
+:root {
+  --background-color: #1a1a1a;
+  --primary-text: rgba(255, 255, 255, .87);
+  --secondary-text: rgba(235, 235, 235, .6);
+  --accent-color: #00c6cf;
 }
